# ledger

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routes/: __init__.py  accounts.py  ledger.py
app/api/schemas/: __init__.py  account.py  ledger.py
app/application/: __init__.py  exceptions.py
app/application/repositories/: __init__.py  account_repository.py  ledger_repository.py
app/application/services/: __init__.py  balance_service.py  idempotency_service.py
app/application/use_cases/: __init__.py  create_account.py  deposit.py  get_balance.py  get_statement.py  transfer.py  withdraw.py
app/domain/: __init__.py  account.py  ledger_entry.py  money.py  transaction_type.py
app/infrastructure/database/: __init__.py  connection.py  models.py  repositories.py  unit_of_work.py
app/infrastructure/in_memory/: __init__.py  account_repository.py  ledger_repository.py
app/observability/: __init__.py  logging.py  metrics.py  middleware.py  tracing.py
migrations/: env.py
migrations/versions/: 20260518_0001_create_accounts_and_ledger_entries.py  20260518_0002_repair_missing_ledger_tables.py
monitoring/prometheus/: prometheus.yml
tests/: test_health.py
tests/api/: test_ledger_api.py  test_observability.py
tests/application/: test_ledger_use_cases.py
tests/domain/: test_account.py  test_ledger_entry.py  test_money.py
tests/infrastructure/: test_sqlalchemy_repositories.py
tests/integration/: test_concurrency.py
